--- a/Djoz-master/index.html
+++ b/Djoz-master/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -7,10 +7,14 @@
     <meta name="keywords" content="DJoz, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>DJoz | Template</title>
+    <title>Sound System Productora</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+    <link rel="icon" href="img/favicon.png" type="image/x-icon">
 
     <!-- Css Styles -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -43,26 +47,27 @@
                     <div class="header__nav">
                         <nav class="header__menu mobile-menu">
                             <ul>
-                                <li class="active"><a href="./index.html">Home</a></li>
-                                <li><a href="./about.html">About</a></li>
-                                <li><a href="./discography.html">Discography</a></li>
-                                <li><a href="./tours.html">Tours</a></li>
+                                <li class="active"><a href="./index.html">Inicio</a></li>
+                                <li><a href="./nosotros.html">Nosotros</a></li>
+                                <li><a href="./publicidades.html">Publicidades</a></li>
+                                <li><a href="./promociones.html">Promociones</a></li>
                                 <li><a href="./videos.html">Videos</a></li>
-                                <li><a href="#">Pages</a>
+                                <!-- <li><a href="#">Pages</a>
                                     <ul class="dropdown">
                                         <li><a href="./about.html">About</a></li>
                                         <li><a href="./blog.html">Blog</a></li>
                                         <li><a href="./blog-details.html">Blog Details</a></li>
                                     </ul>
-                                </li>
-                                <li><a href="./contact.html">Contact</a></li>
+                                </li> -->
+                                <li><a href="./staff.html">Staff</a></li>
+                                <li><a href="./contacto.html">Contacto</a></li>
                             </ul>
                         </nav>
                         <div class="header__right__social">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-instagram"></i></a>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
+                            <a href="https://www.facebook.com/SoundSystemGroup" target="_blank"><i class="fa fa-facebook"></i></a>
+                            <a href="https://www.instagram.com/ss.productora/" target="_blank"><i class="fa fa-instagram"></i></a>
+                            <a href="https://www.youtube.com/channel/UCYoPIIprFBOQs-gp66puPEw" target="_blank"><i class="fa fa-youtube-play"></i></a>
+                            <a href="http://dcloud.com/sound-system-community" target="_blank"><i class="fa fa-soundcloud"></i></a>
                         </div>
                     </div>
                 </div>
@@ -73,16 +78,17 @@
     <!-- Header Section End -->
 
     <!-- Hero Section Begin -->
-    <section class="hero spad set-bg" data-setbg="img/hero-bg.png">
+    <section class="hero spad set-bg" data-setbg="img/portada-2.jpg">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="hero__text">
-                        <span>New single</span>
-                        <h1>Feel the heart beats</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod <br />tempor
-                            incididunt ut labore et dolore magna aliqua.</p>
-                        <a href="https://www.youtube.com/watch?v=K4DyBUG242c" class="play-btn video-popup"><i class="fa fa-play"></i></a>
+                        <span>Bienvenidos a:</span>
+                        <h1>Sound System Productora</h1>
+                        <p>
+                            Trabajamos por y para tu marca
+                        </p>
+                        <a href="https://www.youtube.com/watch?v=vtRb1A4OfYw" class="play-btn video-popup"><i class="fa fa-play"></i></a>
                     </div>
                 </div>
             </div>
@@ -568,31 +574,31 @@
                         <ul>
                             <li>
                                 <i class="fa fa-phone"></i>
-                                <p>Phone</p>
-                                <h6>1-677-124-44227</h6>
+                                <p>Teléfono</p>
+                                <h6>+54 0223 592-4689</h6>
                             </li>
                             <li>
                                 <i class="fa fa-envelope"></i>
                                 <p>Email</p>
-                                <h6>DJ.Music@gmail.com</h6>
+                                <h6>soundsystemproductora@gmail.com</h6>
                             </li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-lg-4 offset-lg-1 col-md-6">
                     <div class="footer__social">
-                        <h2>DJoz</h2>
+                        <h2>Sound System</h2>
                         <div class="footer__social__links">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-instagram"></i></a>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
+                            <a href="https://www.facebook.com/SoundSystemGroup"><i class="fa fa-facebook"></i></a>
+                            <a href="https://www.instagram.com/ss.productora/"><i class="fa fa-instagram"></i></a>
+                            <a href="https://www.youtube.com/@TheSexba"><i class="fa fa-youtube-play"></i></a>
+                            <a href="http://dcloud.com/sound-system-community"><i class="fa fa-soundcloud"></i></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 offset-lg-1 col-md-6">
                     <div class="footer__newslatter">
-                        <h4>Stay With me</h4>
+                        <h4>Te contactamos</h4>
                         <form action="#">
                             <input type="text" placeholder="Email">
                             <button type="submit"><i class="fa fa-send-o"></i></button>
@@ -602,7 +608,7 @@
             </div>
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 			<div class="footer__copyright__text">
-				<p>Copyright &copy; <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></p>
+				<p>Sound System Productora &copy; <script>document.write(new Date().getFullYear());</script> | Todos los Derechos Reservados</p>
 			</div>
 			<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
         </div>
