footer en todas las secciones

--- a/Djoz-master/publicidades.html
+++ b/Djoz-master/publicidades.html
@@ -15,7 +15,7 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
     <link rel="icon" href="img/favicon.png" type="image/x-icon">
-    
+
     <!-- Css Styles -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
@@ -195,7 +195,7 @@
     <!-- Discography Section End -->
 
     <!-- Footer Section Begin -->
-    <footer class="footer footer--normal spad set-bg" data-setbg="img/footer-bg.png">
+    <footer class="footer spad set-bg" data-setbg="img/footer-bg.png">
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-md-6">
@@ -203,31 +203,31 @@
                         <ul>
                             <li>
                                 <i class="fa fa-phone"></i>
-                                <p>Phone</p>
-                                <h6>1-677-124-44227</h6>
+                                <p>Teléfono</p>
+                                <h6>+54 0223 592-4689</h6>
                             </li>
                             <li>
                                 <i class="fa fa-envelope"></i>
                                 <p>Email</p>
-                                <h6>DJ.Music@gmail.com</h6>
+                                <h6>soundsystemproductora@gmail.com</h6>
                             </li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-lg-4 offset-lg-1 col-md-6">
                     <div class="footer__social">
-                        <h2>DJoz</h2>
+                        <h2>Sound System</h2>
                         <div class="footer__social__links">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-instagram"></i></a>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
+                            <a href="https://www.facebook.com/SoundSystemGroup"><i class="fa fa-facebook"></i></a>
+                            <a href="https://www.instagram.com/ss.productora/"><i class="fa fa-instagram"></i></a>
+                            <a href="https://www.youtube.com/@TheSexba"><i class="fa fa-youtube-play"></i></a>
+                            <a href="http://dcloud.com/sound-system-community"><i class="fa fa-soundcloud"></i></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 offset-lg-1 col-md-6">
                     <div class="footer__newslatter">
-                        <h4>Stay With me</h4>
+                        <h4>Te contactamos</h4>
                         <form action="#">
                             <input type="text" placeholder="Email">
                             <button type="submit"><i class="fa fa-send-o"></i></button>
@@ -235,6 +235,11 @@
                     </div>
                 </div>
             </div>
+            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+			<div class="footer__copyright__text">
+				<p>Sound System Productora &copy; <script>document.write(new Date().getFullYear());</script> | Todos los Derechos Reservados</p>
+			</div>
+			<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
         </div>
     </footer>
     <!-- Footer Section End -->
