header en todas las secciones

--- a/Djoz-master/videos.html
+++ b/Djoz-master/videos.html
@@ -35,7 +35,7 @@
     </div>
 
     <!-- Header Section Begin -->
-    <header class="header header--normal">
+    <header class="header">
         <div class="container">
             <div class="row">
                 <div class="col-lg-2 col-md-2">
@@ -47,26 +47,20 @@
                     <div class="header__nav">
                         <nav class="header__menu mobile-menu">
                             <ul>
-                                <li><a href="./index.html">Home</a></li>
-                                <li><a href="./about.html">About</a></li>
-                                <li><a href="./discography.html">Discography</a></li>
-                                <li><a href="./tours.html">Tours</a></li>
-                                <li class="active"><a href="./videos.html">Videos</a></li>
-                                <li><a href="#">Pages</a>
-                                    <ul class="dropdown">
-                                        <li><a href="./about.html">About</a></li>
-                                        <li><a href="./blog.html">Blog</a></li>
-                                        <li><a href="./blog-details.html">Blog Details</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="./contact.html">Contact</a></li>
+                                <li class="active"><a href="./index.html">Inicio</a></li>
+                                <li><a href="./servicios.html">Servicios</a></li>
+                                <li><a href="./trabajos.html">Trabajos realizados</a></li>
+                                <li><a href="./promociones.html">Promociones</a></li>
+                                <li><a href="./videos.html">Videos</a></li>
+                                <li><a href="./staff.html">Staff</a></li>
+                                <li><a href="./contacto.html">Contacto</a></li>
                             </ul>
                         </nav>
                         <div class="header__right__social">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-instagram"></i></a>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
+                            <a href="https://www.facebook.com/SoundSystemGroup" target="_blank"><i class="fa fa-facebook"></i></a>
+                            <a href="https://www.instagram.com/ss.productora/" target="_blank"><i class="fa fa-instagram"></i></a>
+                            <a href="https://www.youtube.com/channel/UCYoPIIprFBOQs-gp66puPEw" target="_blank"><i class="fa fa-youtube-play"></i></a>
+                            <a href="http://dcloud.com/sound-system-community" target="_blank"><i class="fa fa-soundcloud"></i></a>
                         </div>
                     </div>
                 </div>
