--- a/Djoz-master/index.html
+++ b/Djoz-master/index.html
@@ -48,17 +48,10 @@
                         <nav class="header__menu mobile-menu">
                             <ul>
                                 <li class="active"><a href="./index.html">Inicio</a></li>
-                                <li><a href="./nosotros.html">Nosotros</a></li>
-                                <li><a href="./publicidades.html">Publicidades</a></li>
+                                <li><a href="./servicios.html">Servicios</a></li>
+                                <li><a href="./trabajos.html">Trabajos realizados</a></li>
                                 <li><a href="./promociones.html">Promociones</a></li>
                                 <li><a href="./videos.html">Videos</a></li>
-                                <!-- <li><a href="#">Pages</a>
-                                    <ul class="dropdown">
-                                        <li><a href="./about.html">About</a></li>
-                                        <li><a href="./blog.html">Blog</a></li>
-                                        <li><a href="./blog-details.html">Blog Details</a></li>
-                                    </ul>
-                                </li> -->
                                 <li><a href="./staff.html">Staff</a></li>
                                 <li><a href="./contacto.html">Contacto</a></li>
                             </ul>
