--- a/Djoz-master/servicios.html
+++ b/Djoz-master/servicios.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="DJoz, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>DJoz | Template</title>
+    <title>Sound System | Servicios</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -47,8 +47,8 @@
                     <div class="header__nav">
                         <nav class="header__menu mobile-menu">
                             <ul>
-                                <li class="active"><a href="./index.html">Inicio</a></li>
-                                <li><a href="./servicios.html">Servicios</a></li>
+                                <li><a href="./index.html">Inicio</a></li>
+                                <li class="active"><a href="./servicios.html">Servicios</a></li>
                                 <li><a href="./trabajos.html">Trabajos realizados</a></li>
                                 <li><a href="./promociones.html">Promociones</a></li>
                                 <li><a href="./videos.html">Videos</a></li>
@@ -76,8 +76,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumb__links">
-                        <a href="#"><i class="fa fa-home"></i> Home</a>
-                        <span>About</span>
+                        
+                        <span></span>
                     </div>
                 </div>
             </div>
