fotos de portada

--- a/Djoz-master/index.html
+++ b/Djoz-master/index.html
@@ -92,7 +92,7 @@
     </section>
     <!-- Hero Section End -->
 
-    
+    <br><br>
 
     <!-- About Section Begin -->
     <section class="about spad">
@@ -100,19 +100,29 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="about__pic">
-                        <img src="img/about/about.png" alt="">
+                        <img src="img/portada-4.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <div class="about__text">
-                        <div class="section-title">
-                            <h2>DJ Alexandra Rud</h2>
-                            <h1>About me</h1>
+                    <div class="about__text" align="justify">
+                        <div class="section-title" >
+                            <h2>¿Cómo te vamos a ayudar?</h2>
+                            <h1>Sound System</h1>
                         </div>
-                        <p>DJ Rainflow knows how to move your mind, body and soul by delivering tracks that stand out
-                            from the norm. As if this impressive succession of high impact, floor-filling bombs wasn’t
-                            enough to sustain.</p>
-                        <a href="#" class="primary-btn">CONTACT ME</a>
+                            <p>
+                                Llevamos más de 25 años elaborando contenidos para 
+                                medios de comunicación, y agencias publicitarias.
+                            </p>
+                            <p>
+                                Abordamos soluciones creativas, con asesoramiento de imagen y profesionalidad
+                                en cada uno de nuestros proyectos.
+                            </p>
+                            <p>
+                                Estamos seguros, que un trabajo eficiente, puntual, y bien resuelto, se puede alcanzar 
+                                el éxito que se quiere y por lo tanto, un cliente quede conforme con su inversión.
+                            </p>
+                            
+                        <a href="contacto.html" class="primary-btn">CONTACTO</a>
                     </div>
                 </div>
             </div>
