--- a/Djoz-master/servicios.html
+++ b/Djoz-master/servicios.html
@@ -90,14 +90,26 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 p-0">
-                    <div class="skills__content">
+                    <div class="skills__content" align="justify">
                         <div class="section-title">
-                            <h2>DJ Alexandra Rud</h2>
-                            <h1>DJ’s skill</h1>
+                            <h2>Nuestros Servicios</h2>
+                            <h1>Servicios</h1>
                         </div>
-                        <p>DJ Rainflow knows how to move your mind, body and soul by delivering tracks that stand out
-                            from the norm.</p>
-                        <div class="skill__bar__item">
+                        <p>
+                            Profesionales de medios de comunicacion trabajando por y para resaltar las 
+                            mejores cualidades de cada comercio, marca o medio.
+                        </p>
+                        <p>
+                            Abordamos soluciones creativas, con asesoramiento de imagen y profesionalidad
+                            en cada uno de nuestros proyectos.
+                        </p>
+                        <p>
+                            Estamos seguros, que un trabajo eficiente, puntual, y bien resuelto, se puede 
+                            alcanzar el éxito que se quiere y por lo tanto, un cliente quede conforme con 
+                            su inversión.
+                        </p>
+                       
+                        <!-- <div class="skill__bar__item">
                             <p>Perform</p>
                             <div id="bar1" class="barfiller">
                                 <span class="tip"></span>
@@ -117,12 +129,12 @@
                                 <span class="tip"></span>
                                 <span class="fill" data-percentage="98"></span>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <div class="col-lg-6 p-0">
-                    <div class="skills__video set-bg" data-setbg="img/skill-video.jpg">
-                        <a href="https://www.youtube.com/watch?v=S19UcWdOA-I?autoplay=1" class="play-btn video-popup"><i class="fa fa-play"></i></a>
+                    <div class="skills__video set-bg" data-setbg="img/portada-7.jpg">
+                        <a href="https://www.youtube.com/watch?v=vtRb1A4OfYw" class="play-btn video-popup"><i class="fa fa-play"></i></a>
                     </div>
                 </div>
             </div>
@@ -136,19 +148,19 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="about__pic">
-                        <img src="img/about/about.png" alt="">
+                        <img src="img/portada-9.png" alt="">
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="about__text">
                         <div class="section-title">
-                            <h2>He heard something that he knew to be music</h2>
+                            <h2>Potenciá tu marca</h2>
                         </div>
-                        <p>At vero eos et accusamus et iusto odi odgnissimos ducimus qui blanditiis praesentium volup
-                            tatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati
-                            cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi quod
-                            justo pro an.</p>
-                        <img src="img/about/signature.png" alt="">
+                        <p>
+                            Agregamos magia, colores y fantasia a tus proyectos. Spot Publicitarios, 
+                            locuciones institucionales, animadas, doblaje y mucho más...
+                        </p>
+                        <a href="contacto.html" class="primary-btn">CONTACTO</a>
                     </div>
                 </div>
             </div>
@@ -157,7 +169,7 @@
     <!-- About Section End -->
 
     <!-- About Pic Begin -->
-    <div class="about-pic">
+    <!-- <div class="about-pic">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-6">
@@ -189,7 +201,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- About Pic End -->
 
     <!-- About Services Section Begin -->
@@ -198,8 +210,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title center-title">
-                        <h2>WHERE DO I PLAY</h2>
-                        <h1>Best service</h1>
+                        <h2>Contactanos y pedí tu presupuesto a medida</h2>
+                        <h1>El mejor Servicio</h1>
                     </div>
                 </div>
             </div>
