--- a/Djoz-master/servicios.html
+++ b/Djoz-master/servicios.html
@@ -218,48 +218,48 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="about__services__item">
-                        <div class="about__services__item__pic set-bg" data-setbg="img/services/as-1.jpg">
+                        <div class="about__services__item__pic set-bg" data-setbg="">
                             <div class="icon">
-                                <img src="img/services/as-icon-1.png" alt="">
+                               <!--  <img src="img/services/as-icon-1.png" alt=""> -->
                             </div>
                         </div>
                         <div class="about__services__item__text">
-                            <h4>Wedding</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+                            <!-- <h4>Wedding</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p> -->
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="about__services__item">
-                        <!-- <div class="about__services__item__pic set-bg" data-setbg="img/services/as-2.jpg">
+                        <div class="about__services__item__pic set-bg" data-setbg="">
                             <div class="icon">
-                                <img src="img/services/as-icon-2.png" alt="">
+                                <!-- <img src="img/services/as-icon-2.png" alt=""> -->
                             </div>
-                        </div> -->
-                        <!-- <div class="about__services__item__text">
-                            <h4>Clubs and bar</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
-                        </div> -->
+                        </div>
+                        <div class="about__services__item__text">
+                            <!-- <h4>Clubs and bar</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p> -->
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="about__services__item">
-                        <!-- <div class="about__services__item__pic set-bg" data-setbg="img/services/as-3.jpg">
+                        <div class="about__services__item__pic set-bg" data-setbg="">
                             <div class="icon">
-                                <img src="img/services/as-icon-3.png" alt="">
+                                <!-- <img src="img/services/as-icon-3.png" alt=""> -->
                             </div>
-                        </div> -->
-                        <!-- <div class="about__services__item__text">
-                            <h4>Corporate events</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
-                        </div> -->
+                        </div>
+                        <div class="about__services__item__text">
+                            <!-- <h4>Corporate events</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p> -->
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
     <!-- About Services Section End -->
-
+<br><br>
     <!-- Footer Section Begin -->
     <footer class="footer spad set-bg" data-setbg="img/footer-bg.png">
         <div class="container">
