--- a/Djoz-master/contacto.html
+++ b/Djoz-master/contacto.html
@@ -60,7 +60,7 @@
                             <a href="https://www.facebook.com/SoundSystemGroup" target="_blank"><i class="fa fa-facebook"></i></a>
                             <a href="https://www.instagram.com/ss.productora/" target="_blank"><i class="fa fa-instagram"></i></a>
                             <a href="https://www.youtube.com/channel/UCYoPIIprFBOQs-gp66puPEw" target="_blank"><i class="fa fa-youtube-play"></i></a>
-                            <a href="http://dcloud.com/sound-system-community" target="_blank"><i class="fa fa-soundcloud"></i></a>
+                            <a href="https://soundcloud.com/sound-system-community" target="_blank"><i class="fa fa-soundcloud"></i></a>
                         </div>
                     </div>
                 </div>
@@ -176,7 +176,7 @@
                             <a href="https://www.facebook.com/SoundSystemGroup"><i class="fa fa-facebook"></i></a>
                             <a href="https://www.instagram.com/ss.productora/"><i class="fa fa-instagram"></i></a>
                             <a href="https://www.youtube.com/@TheSexba"><i class="fa fa-youtube-play"></i></a>
-                            <a href="http://dcloud.com/sound-system-community"><i class="fa fa-soundcloud"></i></a>
+                            <a href="https://soundcloud.com/sound-system-community" target="_blank"><i class="fa fa-soundcloud"></i></a>
                         </div>
                     </div>
                 </div>
