--- a/Djoz-master/staff.html
+++ b/Djoz-master/staff.html
@@ -92,6 +92,11 @@
                         </div>
                         <div class="event__item__text">
                             <h4>Caro Manetta</h4>
+                            <p>
+                                Voz con presencia, cálida, madura, ideal para institucionales, publicidades descriptivas, 
+                                con detalles en cada producto que pronuncia, amplio conocimiento en manejo del publico y 
+                                conducción de eventos de todo tipo. 
+                            </p>
                             <a href="https://www.facebook.com/carolina.manetta.9/" target="_blank"> <i class="fa fa-facebook-square"> &nbsp;</i>Conocé a Caro</a>
                         </div>
                     </div>
@@ -106,6 +111,11 @@
                         </div>
                         <div class="event__item__text">
                             <h4>Sebastián Padula</h4>
+                            <p>
+                                Voz jovial, de presencia alegre, con tono y presencia, gran variedad de matices, posee 
+                                caracteristicas muy particulares, como una gran ductilidad para doblaje, posee presencia, 
+                                dinamismo y sutileza. 
+                            </p>
                             <a href="https://www.linkedin.com/in/seba-padula-010ab62a/?originalSubdomain=ar" target="_blank"> <i class="fa fa-linkedin-square"> &nbsp;</i>Conocé a Seba</a>
                         </div>
                     </div>
@@ -120,6 +130,11 @@
                         </div>
                         <div class="event__item__text">
                             <h4>Verónca Labat</h4>
+                            <p>
+                                Voz Grave, definida, para audios publicitarios con varios matices y estilos. Locuciones 
+                                publicitarias, conductora en eventos de todo tipo. Mas de 15 años de experiencia en medios 
+                                de diferentes estilos.
+                            </p>
                             <a href="https://www.linkedin.com/in/vero-labat-341143122/" target="_blank"> <i class="fa fa-linkedin-square"> &nbsp;</i>Conocé a Vero</a>
                         </div>
                     </div>
@@ -134,6 +149,10 @@
                         </div>
                         <div class="event__item__text">
                             <h4>Romina García</h4>
+                            <p>
+                                Voz encantadora, con presencia y personalidad, se destaca por su buena pronunciación y los 
+                                matices en tonos bajos, ideal para textos institucionales, tutoriales y más.
+                            </p>
                             <a href="https://www.facebook.com/carolina.manetta.9/" target="_blank"> <i class="fa fa-facebook-square"> &nbsp;</i>Conocé a Romi</a>
                         </div>
                     </div>
@@ -148,6 +167,10 @@
                         </div>
                         <div class="event__item__text">
                             <h4>José Luis Torres</h4>
+                            <p>
+                                Voz de varios estilos, fresca, sutil, con energia, tono bajo o con bien arriba, de acuerdo a lo 
+                                que se necesite. Ductilidad para matices o spots con actings. Profesionalidad y experiencia.
+                            </p>
                             <a href="https://www.linkedin.com/in/seba-padula-010ab62a/?originalSubdomain=ar" target="_blank"> <i class="fa fa-linkedin-square"> &nbsp;</i>Conocé a José Luis</a>
                         </div>
                     </div>
@@ -162,6 +185,10 @@
                         </div>
                         <div class="event__item__text">
                             <h4>Sebastián Santori</h4>
+                            <p>
+                                Voz joven, ágil, dinámica, fresca, con amplio rango de estilos y matices. Interpretaciones 
+                                de personajes y locución neutra.
+                            </p>
                             <a href="https://www.linkedin.com/in/vero-labat-341143122/" target="_blank"> <i class="fa fa-linkedin-square"> &nbsp;</i>Conocé a Sebas</a>
                         </div>
                     </div>
@@ -176,6 +203,10 @@
                         </div>
                         <div class="event__item__text">
                             <h4>Vale Cufré</h4>
+                            <p>
+                                Voz dulce, con tonos bajos sensuales y posee buena pronunciacion y gran variedad de matices. 
+                                Ideales para rubro chicos o adultos, marcando en cada uno su tono identificativo. 
+                            </p>
                             <a href="https://www.facebook.com/carolina.manetta.9/" target="_blank"> <i class="fa fa-facebook-square"> &nbsp;</i>Conocé a Vale</a>
                         </div>
                     </div>
@@ -190,6 +221,11 @@
                         </div>
                         <div class="event__item__text">
                             <h4>Claudio Rodríguez</h4>
+                            <p>
+                                Voz potente entre tonos graves y medios. Limpia, abarcativa y con grandes resonantes, 
+                                ideal para aperturas o presentaciones, artistica y publicidades con descripción lenta, 
+                                precisa y con matices.
+                            </p>
                             <a href="https://www.linkedin.com/in/seba-padula-010ab62a/?originalSubdomain=ar" target="_blank"> <i class="fa fa-linkedin-square"> &nbsp;</i>Conocé a Claudio</a>
                         </div>
                     </div>
