--- a/Djoz-master/promociones.html
+++ b/Djoz-master/promociones.html
@@ -71,15 +71,15 @@
     <!-- Header Section End -->
 
     <!-- Countdown Section Begin -->
-    <section class="countdown countdown--page spad set-bg" data-setbg="img/countdown-bg.jpg">
+    <section class="countdown countdown--page spad set-bg" data-setbg="img/portada-promo.png">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="countdown__text">
-                        <h1>Tomorrowland 2020</h1>
-                        <h4>Music festival start in</h4>
+                        <h1>Promociones vigentes</h1>
+                        <h4>Precios y servicios a conveniencia</h4>
                     </div>
-                    <div class="countdown__timer" id="countdown-time">
+                    <!-- <div class="countdown__timer" id="countdown-time">
                         <div class="countdown__item">
                             <span>20</span>
                             <p>days</p>
@@ -96,9 +96,9 @@
                             <span>09</span>
                             <p>seconds</p>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="buy__tickets">
-                        <a href="#" class="primary-btn">Buy tickets</a>
+                        <a href="contacto.html" class="primary-btn">Consultanos</a>
                     </div>
                 </div>
             </div>
@@ -112,7 +112,7 @@
             <div class="row">
                 <div class="col-lg-6 order-lg-1">
                     <div class="tours__item__text">
-                        <h2>Untold Festival 2020</h2>
+                        <h2>Music Box</h2>
                         <div class="tours__text__widget">
                             <ul>
                                 <li>
@@ -128,10 +128,11 @@
                             <div class="price">$ 35.00</div>
                         </div>
                         <div class="tours__text__desc">
-                            <p>Held in Europe’s electronic music capital on New Year’s Eve, the seminal Funkhaus Berlin
-                                hosts an impressive roster of techno artists worthy.</p>
-                            <p>Soundtracking the leap from 2019 into 2020 in what is one of the most anticipated nights
-                                of the year, in one of the city’s most hyped venues, HYTE Berlin NYE is the</p>
+                            <p>
+                                Programa enlatado de 2 horas reales, estilo magazine con hist´s actuales y 
+                                los mejores clásicos. Conducción femenina, especial para horarios donde la 
+                                radio te hace mas compañia. 
+                            </p>
                         </div>
                         <a href="#" class="primary-btn border-btn">Buy tickets</a>
                     </div>
