--- a/Djoz-master/promociones.html
+++ b/Djoz-master/promociones.html
@@ -109,106 +109,97 @@
     <!-- Tours Section Begin -->
     <section class="tours spad">
         <div class="container">
-            <div class="row">
+            <div class="row"align="justify">
+                
                 <div class="col-lg-6 order-lg-1">
-                    <div class="tours__item__text">
+                    <div class="tours__item__text" >
                         <h2>Music Box</h2>
-                        <div class="tours__text__widget">
-                            <ul>
-                                <li>
-                                    <i class="fa fa-clock-o"></i>
-                                    <span>8:00pm</span>
-                                    <span>Dec 15, 2019</span>
-                                </li>
-                                <li>
-                                    <i class="fa fa-map-marker"></i>
-                                    Funkhaus Berlin, Berlin, Germany
-                                </li>
-                            </ul>
-                            <div class="price">$ 35.00</div>
-                        </div>
                         <div class="tours__text__desc">
                             <p>
-                                Programa enlatado de 2 horas reales, estilo magazine con hist´s actuales y 
+                                Programa enlatado de 2 horas reales, estilo magazine con hits actuales y 
                                 los mejores clásicos. Conducción femenina, especial para horarios donde la 
                                 radio te hace mas compañia. 
                             </p>
                         </div>
-                        <a href="#" class="primary-btn border-btn">Buy tickets</a>
+                        <a href="https://www.youtube.com/watch?v=xw74xVytS2w" target="_blank" class="primary-btn border-btn">Enterate de más</a>
                     </div>
                 </div>
                 <div class="col-lg-6 order-lg-2">
                     <div class="tours__item__pic">
-                        <img src="img/tours/tour-1.jpg" alt="">
+                        <img src="img/promos/promo-musicbox.JPG" alt="">
                     </div>
                 </div>
+
                 <div class="col-lg-6 order-lg-4">
                     <div class="tours__item__text tours__item__text--right">
-                        <h2>Untold Festival 2020</h2>
-                        <div class="tours__text__widget">
-                            <ul>
-                                <li>
-                                    <i class="fa fa-clock-o"></i>
-                                    <span>8:00pm</span>
-                                    <span>Dec 15, 2019</span>
-                                </li>
-                                <li>
-                                    <i class="fa fa-map-marker"></i>
-                                    Funkhaus Berlin, Berlin, Germany
-                                </li>
-                            </ul>
-                            <div class="price">$ 35.00</div>
-                        </div>
+                        <h2>Pastillas - Micro</h2>
                         <div class="tours__text__desc">
-                            <p>Held in Europe’s electronic music capital on New Year’s Eve, the seminal Funkhaus Berlin
-                                hosts an impressive roster of techno artists worthy.</p>
-                            <p>Soundtracking the leap from 2019 into 2020 in what is one of the most anticipated nights
-                                of the year, in one of the city’s most hyped venues, HYTE Berlin NYE is the</p>
+                            <p>
+                                INFODATA son segmentos de 2 a 5 minutos de duración con contenido cultural, histórico, 
+                                curiosidades y novedades tecnólogias.
+                            </p>
+                            <p>
+                                BIODATA son segmentos que incluyen temas musicales, de duracion entre 7 a 15 minutos, 
+                                trata de anécdotas e historias de los artistas mas conocidos. 
+                            </p>
                         </div>
-                        <a href="#" class="primary-btn border-btn">Buy tickets</a>
+                        <a href="https://www.youtube.com/watch?v=BKYzfuYHMPw" target="_blank" class="primary-btn border-btn">Enterate de más</a>
                     </div>
                 </div>
                 <div class="col-lg-6 order-lg-3">
                     <div class="tours__item__pic tours__item__pic--left">
-                        <img src="img/tours/tour-2.jpg" alt="">
+                        <img src="img/promos/promo-pastillas.JPG" alt="">
                     </div>
                 </div>
+
                 <div class="col-lg-6 order-lg-5">
                     <div class="tours__item__text">
-                        <h2>Untold Festival 2020</h2>
-                        <div class="tours__text__widget">
-                            <ul>
-                                <li>
-                                    <i class="fa fa-clock-o"></i>
-                                    <span>8:00pm</span>
-                                    <span>Dec 15, 2019</span>
-                                </li>
-                                <li>
-                                    <i class="fa fa-map-marker"></i>
-                                    Funkhaus Berlin, Berlin, Germany
-                                </li>
-                            </ul>
-                            <div class="price">$ 35.00</div>
-                        </div>
+                        <h2>Servicio Premium Especial</h2>
                         <div class="tours__text__desc">
-                            <p>Held in Europe’s electronic music capital on New Year’s Eve, the seminal Funkhaus Berlin
-                                hosts an impressive roster of techno artists worthy.</p>
-                            <p>Soundtracking the leap from 2019 into 2020 in what is one of the most anticipated nights
-                                of the year, in one of the city’s most hyped venues, HYTE Berlin NYE is the</p>
+                            <p>
+                                Lanzamos una gama de opciones musicales Premium, seleccionadas por su éxito y demanda.
+                                Tendrás la opción de elegir las canciones que más te gusten y podrás escucharlas desde la web 
+                                o descargarlas directamente a tu computadora o móvil. No es un dvd, ni nada por el estilo, 
+                                directamente es una nube cargada de música y herramientas bonificadas para usuarios del servicio.
+                            </p> 
+                            <p>  
+                                Nuestra nube Premium contiene Hits, videos, microguias, micros, etc.
+                                Se actualiza diariamente para que justamente el cliente se encuentre 100% actualizado. Consultanos.
+                            </p> 
                         </div>
-                        <a href="#" class="primary-btn border-btn">Buy tickets</a>
+                        <a href="contacto.html" class="primary-btn border-btn">Enterate de más</a>
                     </div>
                 </div>
                 <div class="col-lg-6 order-lg-6">
+                    <div class="tours__item__pic tours__item__pic--right">
+                        <img src="img/promos/promo-premium.JPG" alt="">
+                    </div>
+                </div>
+                
+                <div class="col-lg-6 order-lg-8">
+                    <div class="tours__item__text">
+                        <h2>Servicio de Streaming y Diseño Web</h2>
+                        <div class="tours__text__desc">
+                            <p>
+                                Tenemos la opción de un servicio de streaming y diseño web. También
+                                contratamos el servicio de dominio y de hosting para que tu marca sea 
+                                única y reconocible en todo el mundo.
+
+                            </p> 
+                        </div>
+                        <a href="contacto.html" class="primary-btn border-btn">Enterate de más</a>
+                    </div>
+                </div>
+                <div class="col-lg-6 order-lg-7">
                     <div class="tours__item__pic tours__item__pic--last">
-                        <img src="img/tours/tour-3.jpg" alt="">
+                        <img src="img/promos/promo-streaming.JPG" alt="">
                     </div>
                 </div>
             </div>
         </div>
     </section>
     <!-- Tours Section End -->
-
+<br><br><br><br><br><br><br><br><br><br><br><br>
     <!-- Footer Section Begin -->
     <footer class="footer spad set-bg" data-setbg="img/footer-bg.png">
         <div class="container">
