correción ortográfica index

--- a/Djoz-master/index.html
+++ b/Djoz-master/index.html
@@ -118,8 +118,8 @@
                                 en cada uno de nuestros proyectos.
                             </p>
                             <p>
-                                Estamos seguros, que un trabajo eficiente, puntual, y bien resuelto, se puede alcanzar 
-                                el éxito que se quiere y por lo tanto, un cliente quede conforme con su inversión.
+                                Estamos seguros que, mediante un trabajo eficiente, puntual y bien resuelto se puede alcanzar 
+                                el éxito que se quiere y, por lo tanto, un cliente quede conforme con su inversión.
                             </p>
                             
                         <a href="contacto.html" class="primary-btn">CONTACTO</a>
