--- a/Djoz-master/contacto.html
+++ b/Djoz-master/contacto.html
@@ -69,7 +69,7 @@
         </div>
     </header>
     <!-- Header Section End -->
-
+<br><br>
     <!-- Breadcrumb Begin -->
     <div class="breadcrumb-option">
         <div class="container">
@@ -84,15 +84,42 @@
         </div>
     </div>
     <!-- Breadcrumb End -->
-
-    <!-- Map Begin -->
-    <div class="map">
+    <section class="about about--page spad">
         <div class="container">
+            <div class="row">
+                <div class="col-lg-5">
+                    <div class="about__pic">
+                        <img src="img/contacto-portada2.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-7">
+                    <div class="about__text" align="justify">
+                        <div class="section-title">
+                            <h2>De Mar del Plata para el Mundo</h2>
+                        </div>
+                        <p>
+                            Estamos capacitados para realizar trabajos en cualquier parte del globo dónde 
+                            se requiera nuestro servicios. Contactate con nosotros y conocenos.
+                        </p>
+                        <p>
+                            Tu marca es tu identidad y, por esa razón, tenemos servicios a medida de tus requerimientos. 
+                        </p>
+                      
+                        <!-- <a href="contacto.html" class="primary-btn">CONTACTO</a> -->
+                    </div>
+                </div>                
+            </div>          
+        </div>       
+    </section>
+    <!-- Map Begin -->
+    <!-- <div class="map">
+        <div class="container">
+        
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2942.5524090066037!2d-71.10245469994108!3d42.47980730490846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e3748250c43a43%3A0xe1b9879a5e9b6657!2sWinter%20Street%20Public%20Parking%20Lot!5e0!3m2!1sen!2sbd!4v1577299251173!5m2!1sen!2sbd"
                 height="585" style="border:0;" allowfullscreen=""></iframe>
         </div>
-    </div>
+    </div> -->
     <!-- Map End -->
 
     <!-- Contact Section Begin -->
@@ -102,26 +129,27 @@
                 <div class="col-lg-4">
                     <div class="contact__address">
                         <div class="section-title">
-                            <h2>Contact info</h2>
+                            <h2>Información</h2>
                         </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore.</p>
+                        <p align="justify">
+                            Contactanos y te presupuestamos el mejor servicio en base a tus requerimientos.
+                        </p>
                         <ul>
                             <li>
                                 <i class="fa fa-map-marker"></i>
-                                <h5>Address</h5>
-                                <p>Los Angeles Gournadi, 1230 Bariasl</p>
+                                <h5>Localización</h5>
+                                <p>Mar del Plata, Buenos Aires - Argentina</p>
                             </li>
                             <li>
                                 <i class="fa fa-phone"></i>
-                                <h5>Hotline</h5>
-                                <span>1-677-124-44227</span>
-                                <span>1-688-356-66889</span>
+                                <h5>Teléfono</h5>
+                                <span>+54 0223 592-4689</span>
+                                <!-- <span>1-688-356-66889</span> -->
                             </li>
                             <li>
                                 <i class="fa fa-envelope"></i>
                                 <h5>Email</h5>
-                                <p>Support@gamail.com</p>
+                                <p>soundsystemproductora@gmail.com</p>
                             </li>
                         </ul>
                     </div>
@@ -129,18 +157,20 @@
                 <div class="col-lg-8">
                     <div class="contact__form">
                         <div class="section-title">
-                            <h2>Get in touch</h2>
+                            <h2>Mantengamos el contacto</h2>
                         </div>
-                        <p>Eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices
-                            gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
+                        <p>
+                            Mandanos un mensaje rápido y te contactamos por el medio que prefieras. Tenemos 
+                            servicios espectaculares para potenciar tu marca y llevarla a otro nivel.
+                        </p>
                         <form action="#">
                             <div class="input__list">
-                                <input type="text" placeholder="Name">
+                                <input type="text" placeholder="Nombre completo">
                                 <input type="text" placeholder="Email">
-                                <input type="text" placeholder="Website">
+                                <input type="text" placeholder="Teléfono">
                             </div>
-                            <textarea placeholder="Comment"></textarea>
-                            <button type="submit" class="site-btn">SEND MESSAGE</button>
+                            <textarea placeholder="Mensaje"></textarea>
+                            <button type="submit" class="site-btn">ENVIAR</button>
                         </form>
                     </div>
                 </div>
@@ -148,7 +178,7 @@
         </div>
     </section>
     <!-- Contact Section End -->
-
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <!-- Footer Section Begin -->
     <footer class="footer spad set-bg" data-setbg="img/footer-bg.png">
         <div class="container">
