--- a/Djoz-master/index.html
+++ b/Djoz-master/index.html
@@ -140,33 +140,33 @@
                     </div>
                 </div>
                 <div class="col-lg-6 p-0">
-                    <div class="row services__list">
+                    <div class="row services__list" align="justify">
                         <div class="col-lg-6 p-0 order-lg-1 col-md-6 order-md-1">
                             <div class="service__item deep-bg">
                                 <img src="img/services/service-1.png" alt="">
                                 <h4>Locuciones</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+                                <p>Servicio ideal para cualquier tipo de sector o rubro. Profesionales con experiencia a tu servicio.</p>
                             </div>
                         </div>
                         <div class="col-lg-6 p-0 order-lg-2 col-md-6 order-md-2">
                             <div class="service__item">
                                 <img src="img/services/service-2.png" alt="">
                                 <h4>Musicalización</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+                                <p>Llevá tu marca a otro nivel, poniéndole la música que necesita para impactar al público.</p>
                             </div>
                         </div>
                         <div class="col-lg-6 p-0 order-lg-4 col-md-6 order-md-4">
                             <div class="service__item deep-bg">
                                 <img src="img/services/service-4.png" alt="">
                                 <h4>Publicidad y Arte</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+                                <p>Creatividad en su máxima expresión. Traenos tu marca y te mostramos como venderla en medios y Redes Sociales.</p>
                             </div>
                         </div>
                         <div class="col-lg-6 p-0 order-lg-3 col-md-6 order-md-3">
                             <div class="service__item">
                                 <img src="img/services/service-3.png" alt="">
                                 <h4>Ediciones y Mastering</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+                                <p>Trae tu pista y nosotros la editamos y materizamos con un sonido increíble, modulado y diferenciado del resto.</p>
                             </div>
                         </div>
                     </div>
